[package]
name = "napi_sandbox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.napi]
# version = "2"
path = "/Volumes/Storage/Development/alshdavid-forks/napi-rs/crates/napi"
default-features = false
features = ["napi8", "tokio_rt", "serde-json", "async"]

[dependencies.napi-derive] 
path = "/Volumes/Storage/Development/alshdavid-forks/napi-rs/crates/macro"
# version = "2"

[build-dependencies]
napi-build = "2"